// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomFieldInput/> should render a boolean dropdown 1`] = `
<div>
  <div
    class="custom-field-input--dropdown"
  >
    <span
      class="wrapper autoWidthInputContainer placeholder"
      id="rule-custom-field-123456"
    >
      <span
        class="autoWidthSpan"
      >
        Select an option
      </span>
      <input
        autocomplete="off"
        class="baseStyles stealth"
        id="rule-custom-field-123456-input"
        name="Yes/No field"
        placeholder="Select an option"
        type="text"
        value=""
      />
      <span
        class="hiddenInputValue"
      />
    </span>
  </div>
</div>
`;

exports[`<CustomFieldInput/> should render a number input 1`] = `
<div>
  <span
    class="custom-field-input--number wrapper group horizontal"
  >
    <input
      class="input"
      max="10"
      min="1"
      placeholder="Set value..."
      step="1"
      type="number"
      value=""
    />
    <span
      class="controls group vertical"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-a432 button wrapper small ui-button-fill-a432 ui-button-secondary-a432 ui-button-small-a432"
        type="button"
      >
        <span
          class="ui-button-content-a432"
        >
          <i
            class="material-icons icon"
          >
            arrow_drop_up
          </i>
        </span>
      </button>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-a432 button wrapper small ui-button-fill-a432 ui-button-secondary-a432 ui-button-small-a432"
        type="button"
      >
        <span
          class="ui-button-content-a432"
        >
          <i
            class="material-icons icon"
          >
            arrow_drop_down
          </i>
        </span>
      </button>
    </span>
  </span>
</div>
`;

exports[`<CustomFieldInput/> should render a text dropdown 1`] = `
<div>
  <div
    class="custom-field-input--dropdown"
  >
    <span
      class="wrapper autoWidthInputContainer placeholder"
      id="rule-custom-field-12345"
    >
      <span
        class="autoWidthSpan"
      >
        Select an option
      </span>
      <input
        autocomplete="off"
        class="baseStyles stealth"
        id="rule-custom-field-12345-input"
        name="Dropdown field"
        placeholder="Select an option"
        type="text"
        value=""
      />
      <span
        class="hiddenInputValue"
      />
    </span>
  </div>
</div>
`;

exports[`<CustomFieldInput/> should render a text input 1`] = `
<div>
  <div
    class="custom-field-input--text"
  >
    <div
      class="wrapper"
    >
      <input
        class="input"
        data-resizable="false"
        id="input-text-1"
        name="input-text-1"
        placeholder="Some placeholder"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
